# konig-c

./: .gitignore  CMakeLists.txt  README.md  build.sh  client.go  contributors.txt  konig.go  main.c  test-linked.c
cmake/: FindAntTweakBar.cmake  FindOpenCL.cmake
data/kernels/: graphtopo.cl
graph/: graph.go
graphproto.pb/: graphproto.pb.go  graphproto.proto
graphrenderer/: renderer.go
graphserver/: server.go
konig/: CMakeLists.txt  cmake
konig/src/: konigapp.c
libkonig/: CMakeLists.txt  build.sh  test-linked.c
libkonig/data/kernels/: graphtopo.cl
libkonig/src/: ComputeToolkit.cpp  ComputeToolkit.h  DrawableGraph.cpp  DrawableGraph.h  GraphRenderer.cpp  GraphRenderer.h  ParticleSolver.cpp  ParticleSolver.h  Quaternion.h  Texture.cpp  clutils.cpp  clutils.h  graphproto.pb.cc  graphproto.proto  konig.cpp
osx/: xcode-gen.sh
osx-app/Konig/DerivedData/Konig/: info.plist
osx-app/Konig/DerivedData/Konig/Index/Debug/macosx10.10-x86_64/Konig.xcindex/: db.xcindexdb-shm  db.xcindexdb-wal
osx-app/Konig/Konig/: AppDelegate.swift  Info.plist  ViewController.swift  main.swift
osx-app/Konig/Konig.xcodeproj/: project.pbxproj
osx-app/Konig/Konig.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
osx-app/Konig/Konig.xcodeproj/xcuserdata/fcvarela.xcuserdatad/xcschemes/: Konig.xcscheme  xcschememanagement.plist
osx-app/Konig/Konig/Base.lproj/: Main.storyboard
osx-app/Konig/KonigTests/: Info.plist  KonigTests.swift
src/: DrawableGraph.cpp  DrawableGraph.h  Graph.cpp  Graph.h  GraphRPCService.cpp  GraphRPCService.h  GraphRenderer.cpp  GraphRenderer.h  ParticleSolver.cpp  ParticleSolver.h  Quaternion.h  Texture.cpp  Texture.h  Vector.h  Vertex.h  clutils.cpp  clutils.h  gl.h  graphproto.pb.h  graphtopo.cl  konig.c  konig.cpp  konig.h  konigapp.c
test/: client.go
unix/: gen-unix.sh
xcode/: gen-xcode.sh
